# open-gira

./: .flake8  .gitignore  .snakemake-workflow-catalog.yml  404.html  Dockerfile  LICENSE  README.md  Snakefile  UTM_EPSG_code.py  archive_results.sh  book.toml  config.json  config.yaml  demo_pyrosm.ipynb  demo_pyrosm.py  docker-compose.yml  environment.yml  explore-plot.ipynb  explore-requirements.txt  explore-routing.ipynb  extract_regional_exposure.sh  index.html  join_data.py  map_outages.ipynb  network_hazard_intersection.py  osm_to_network.py  osm_to_pq.py  pixi.toml  pq_to_gpkg.py  prepare-extracts.py  print.html  process_power_7_assigngdp.py.lprof  pyproject.toml  requirements.txt  run.sh  searchindex.js  searchindex.json  singularity-umamba.def  split_to_bounding_boxes.sh
.tests/: config.yaml
bundled_data/: README.md  country_classification.ipynb  damage_curves.xlsx  global_road_speeds.xlsx  rehabilitation_costs.xlsx  storm_basins.geojson  transport_costs.csv  world_bank_country_classification.xlsx
config/: README.md  aqueduct-coast.txt  aqueduct-river.txt  aqueduct_river_rcp4p5_MIROC-ESM-CHEM_2030_tifs.txt  config.yaml  highway-secondary.txt  highway_surface_to_paved.csv  land_use_to_surface_roughness.csv  nbs_reduction_factors.csv  road-secondary.txt
demo/: extract_grid_all.py  extract_grid_direct_damages.py  extract_grid_lines.py  grid_damages_columns.txt
docs/: README.md
download/: Snakefile
notebooks/: built-capital-gva.ipynb  capital-stocks.ipynb  disaggregate-trade-to-adm1.ipynb  disaggregate-trade-to-network.ipynb  explore-landslides.ipynb  (+9 more)
(+1127 files in other folders)
